src/objects/IT_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Access Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>IT Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>IT Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>